--- a/core/templates/core/u_ip.html
+++ b/core/templates/core/u_ip.html
@@ -52,7 +52,7 @@
                 {% for system in systems %}
                 <tr>
                     <th scope="row">{{ forloop.counter }}</th>
-                    <td>{{ system.ip_address }}</td>
+                    <td>Placeholder for IP</td>
                     <td>{{ system.system }}</td>
                     <td>{{ system.username }}</td>
                     <td>{{ system.machine }}</td>
